--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>HTML5</title>
   <script defer src="lesson5.js"></script>
   <link rel="stylesheet" href="index.css">
+  <div classname="form">
   <form>
     <div class="container">
   
@@ -12,13 +13,14 @@
   
       <input id="password" type="text" placeholder="password" name="psw" required>
 
-      <button onclick="doSubmit()" type="button" class="submit_btn" value="login_btn">LOGIN</button>
+      <button  id="butt" type="button" class="submit_btn" value="login_btn">LOGIN</button>
 
       <div class="signin">
         <p>Not registrated? <a href="#">Create an account.</a></p>
       </div>
     </div>
   </form >
+</div>
   <div class="footer">
     <div id="username_block"></div>
     <br/>
